test/fail/or-pattern-diff.mo
let (#a a) or (#b b) = #a 5;
